--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <img src="./images/a908c45d7489f65e0bcc11ec0c61ea6f.jpg" alt="">
             <img src="./images/photo-1621478374422-35206faeddfb.jpeg" alt="">
           </div>
-          <div class="images">
+          <div class="images images2">
             <img src="./images/photo-1547861533-ae8896b04d10.jpeg" alt="">
-            <img src="./images/photo-1546519638-68e109498ffc.jpeg" alt="">
-            <img src="./images/photo-1560746420-1b4dc6d92d17.jpeg" alt="">
+            <img id="hide" src="./images/photo-1546519638-68e109498ffc.jpeg" alt="">
+            <img id="hide" src="./images/photo-1560746420-1b4dc6d92d17.jpeg" alt="">
           </div>
         </div>
         <div class="gall bot">
